# store-it

./: .gitignore  docker-compose.yml  next.config.ts  test-appwrite-otp.mjs  test-email-delivery.mjs
app/(root)/: page.tsx
app/(root)/[type]/: page.tsx
backend/: Dockerfile  auth_utils.py  database.py  main.py  pyproject.toml
backend/routes/: auth.py  files.py
backend/services/: storage.py
backend/utils/: email.py  encryption.py  gemini.py  getToken.ts  token.py
components/: ActionDropdown.tsx  AuthForm.tsx  Card.tsx  Search.tsx
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(root)/: layout.tsx  page.tsx
frontend/app/landing/: page.tsx
frontend/app/shared-links/: page.tsx
frontend/components/: ActionDropdown.tsx  ActionsModalContent.tsx  AuthForm.tsx  Card.tsx  Chart.tsx  FilePreviewModal.tsx  FileUploader.tsx  FormattedDateTime.tsx  Header.tsx  MobileNavigation.tsx  Search.tsx  Sidebar.tsx  SummaryPanel.tsx  Thumbnail.tsx
frontend/components/landing/: AnimatedBackground.tsx  CTA.tsx  DashboardPreview.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Security.tsx
frontend/constants/: index.ts
frontend/contexts/: FilesContext.tsx
frontend/lib/: api.ts  auth.ts  utils.ts
frontend/lib/actions/: file.actions.ts  user.actions.ts
frontend/types/: index.d.ts
lib/: utils.ts
lib/actions/: file.actions.ts  user.actions.ts
nginx/: Dockerfile  nginx.conf
types/: index.d.ts
(+4 files in other folders)
