[project]
name = "backend"
version = "0.1.0"
description = "SecureIt Python backend"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.84",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "fastapi-mail>=1.6.2",
    "google-genai>=2.2.0",
    "minio>=7.2.20",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
]

